Bug 128651 - Undo of attribute changes on transformed custom shapes changes position and size
Summary: Undo of attribute changes on transformed custom shapes changes position and size
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-07 13:22 UTC by Regina Henschel
Modified: 2019-11-13 13:46 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
A collection of transformed custom shapes (15.84 KB, application/vnd.oasis.opendocument.presentation)
2019-11-07 13:22 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2019-11-07 13:22:33 UTC
Created attachment 155611 [details]
A collection of transformed custom shapes

Open attached document and try e.g.:
Apply "Autofit text" and undo.
Apply a new area filling to the shape and undo.
Apply a large line width to the shape and undo.

Error: On undo the attribute is changed back, but the shape gets a new size and position.
Comment 1 Xisco Faulí 2019-11-08 10:19:52 UTC
Reproduced in

Version: 6.4.0.0.alpha1+
Build ID: 498c2d3944b666c2f016b65903001920db2cb2a4
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Commit Notification 2019-11-12 10:17:13 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7cf0e43d39172cc083e7b64e06cf0730f14bcf19

tdf#128651 SdrObjCustomShape::NbcSetSnapRect needs logic rect

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Regina Henschel 2019-11-13 13:46:05 UTC
Fix is available in Version: 6.4.0.0.alpha1+ (x64)
Build ID: bc6e282bc2a43093c7a7b4d517c9e809c008298e
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: default; VCL: win; 
Locale: de-DE (en_US); UI-Language: en-US
Calc: CL