svx/source/svdraw/svdundo.cxx
@@ -348,6 +348,8 @@ void SdrUndoAttrObj::Undo()
         // laid out again from AdjustTextFrameWidthAndHeight(). This makes
         // rescuing the size of the object necessary.
         const tools::Rectangle aSnapRect = pObj->GetSnapRect();
+        // SdrObjCustomShape::NbcSetSnapRect needs logic instead of snap rect
+        const tools::Rectangle aLogicRect = pObj->GetLogicRect();
 
         if(pUndoSet)
         {
@@ -382,7 +384,10 @@ void SdrUndoAttrObj::Undo()
         // Restore previous size here when it was changed.
         if(aSnapRect != pObj->GetSnapRect())
         {
-            pObj->NbcSetSnapRect(aSnapRect);
+            if(dynamic_cast<const SdrObjCustomShape*>(pObj))
+                pObj->NbcSetSnapRect(aLogicRect);
+            else
+                pObj->NbcSetSnapRect(aSnapRect);
         }
 
         pObj->GetProperties().BroadcastItemChange(aItemChange);
@@ -425,6 +430,7 @@ void SdrUndoAttrObj::Redo()
         sdr::properties::ItemChangeBroadcaster aItemChange(*pObj);
 
         const tools::Rectangle aSnapRect = pObj->GetSnapRect();
+        const tools::Rectangle aLogicRect = pObj->GetLogicRect();
 
         if(pRedoSet)
         {
@@ -459,7 +465,10 @@ void SdrUndoAttrObj::Redo()
         // Restore previous size here when it was changed.
         if(aSnapRect != pObj->GetSnapRect())
         {
-            pObj->NbcSetSnapRect(aSnapRect);
+            if(dynamic_cast<const SdrObjCustomShape*>(pObj))
+                pObj->NbcSetSnapRect(aLogicRect);
+            else
+                pObj->NbcSetSnapRect(aSnapRect);
         }
 
         pObj->GetProperties().BroadcastItemChange(aItemChange);
